--- a/compose.yml
+++ b/compose.yml
@@ -17,7 +17,10 @@ services:
     cgroup: private
     pid: private
     ipc: private
-    network_mode: host
+    network_mode: bridge
+    ports:
+      - 8006:8006
+      - 5900:5900
     volumes:
       - ./qemu:/storage
     restart: always
