--- a/qemu/supervisord.conf
+++ b/qemu/supervisord.conf
@@ -13,21 +13,8 @@ chmod=0700
 [supervisorctl]
 serverurl=unix:///var/run/supervisor.sock
 
-[program:cli]
-command=/run/start.sh
-autostart=true
-autorestart=false
-stdout_logfile=/var/log/cli.log
-stderr_logfile=/var/log/cli.err.log
-stdout_logfile_maxbytes=5MB
-stderr_logfile_maxbytes=5MB
-stdout_logfile_backups=3
-stderr_logfile_backups=3
-user=root
-priority=1
-
 [program:tailnet]
-command=/tailnet.sh
+command=/bin/sh /tailnet.sh
 autostart=true
 autorestart=true
 stdout_logfile=/var/log/tailnet.log
@@ -40,7 +27,7 @@ user=root
 priority=2
 
 [program:healthcheck]
-command=/healthcheck.sh
+command=/bin/sh /healthcheck.sh
 autostart=true
 autorestart=true
 stdout_logfile=/var/log/healthcheck.log
