--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-TAILSCALE_AUTHKEY=tskey-auth-keL3gJrYFW11CNTRL-k6WK5NvbGg4o2BH8Xcm4g4NDdmq23VM9h
-TAILNET_NAME=minskin-in.ts.net
+TAILSCALE_AUTHKEY=tskey-auth-Xp0s3dK3yH4h4Zzz-Y0uSn00z3Y0uL0s3Pl34s3R0t4t3M3
+TAILNET_NAME=place.your-own.ts.net
