--- a/.devcontainer/fedora/devcontainer.json
+++ b/.devcontainer/fedora/devcontainer.json
@@ -17,5 +17,5 @@
     "onAutoForward": "ignore"
   },
   "dockerComposeFile": "../codespaces.yml",
-  "initializeCommand": "podman  system prune --all --force"
+  "initializeCommand": "docker  system prune --all --force"
 }
