--- a/.devcontainer/proxmox/devcontainer.json
+++ b/.devcontainer/proxmox/devcontainer.json
@@ -4,7 +4,7 @@
   "containerEnv": {
     "BOOT": "proxmox",
     "CPU_CORES": "max",
-    "RAM_SIZE": "half",
+    "RAM_SIZE": "max",
     "DISK_SIZE": "174G",
     "MACHINE": "q35",
     "KVM": "Y",
@@ -13,8 +13,8 @@
     "DISK_TYPE": "scsi",
     "DISK_IO": "threads",
     "VM_NET_IP": "10.4.20.99",
-    "ENGINE": "podman",
-    "SUPPORT": "https://github.com/sudosu201/tailnet"
+    "ENGINE": "docker",
+    "SUPPORT": "https://github.com/mayas-alas/tailnet"
   },
   "forwardPorts": [
     8006
@@ -29,5 +29,5 @@
     "onAutoForward": "ignore"
   },
   "dockerComposeFile": "../codespaces.yml",
-  "initializeCommand": "podman  system prune --all --force"
+  "initializeCommand": "docker  system prune --all --force"
 }
