--- a/qemu/supervisord.conf
+++ b/qemu/supervisord.conf
@@ -13,10 +13,15 @@ chmod=0700
 [supervisorctl]
 serverurl=unix:///var/run/supervisor.sock
 
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory=supervisor.rpcinterface:make_main_rpcinterface
+
 [program:tailnet]
-command=/bin/sh /tailnet.sh
+command=/bin/sh /tailnet.sh start
 autostart=true
 autorestart=true
+startsecs=5
+startretries=3
 stdout_logfile=/var/log/tailnet.log
 stderr_logfile=/var/log/tailnet.err.log
 stdout_logfile_maxbytes=5MB
@@ -24,12 +29,15 @@ stderr_logfile_maxbytes=5MB
 stdout_logfile_backups=3
 stderr_logfile_backups=3
 user=root
-priority=2
+priority=1
 
 [program:healthcheck]
-command=/bin/sh /healthcheck.sh
+command=/bin/sh /healthcheck.sh status
 autostart=true
 autorestart=true
+exitcodes=0,1
+startsecs=0
+startretries=0
 stdout_logfile=/var/log/healthcheck.log
 stderr_logfile=/var/log/healthcheck.err.log
 stdout_logfile_maxbytes=5MB
