--- a/.devcontainer/debian/devcontainer.json
+++ b/.devcontainer/debian/devcontainer.json
@@ -17,5 +17,5 @@
     "onAutoForward": "ignore"
   },
   "dockerComposeFile": "../codespaces.yml",
-  "initializeCommand": "docker  system prune --all --force"
+  "postCreateCommand": "sudo tailscale up --ssh --hostname=tailnet"
 }
