--- a/.devcontainer/mx/devcontainer.json
+++ b/.devcontainer/mx/devcontainer.json
@@ -29,5 +29,5 @@
     "onAutoForward": "ignore"
   },
   "dockerComposeFile": "../codespaces.yml",
-  "initializeCommand": "docker  system prune --all --force"
+  "postCreateCommand": "sudo tailscale up --ssh --hostname=tailnet"
 }
