--- a/web/conf/nginx.conf
+++ b/web/conf/nginx.conf
@@ -26,14 +26,13 @@ server {
     add_header Cache-Control "no-cache";
 
     location / {
+        root /run/shm;
+        try_files $uri @var_www;
+    }
 
-      root /run/shm;
-
-      if ( -f /run/shm/index.html) {
-        break;
-      }
-
-      try_files /index.html @vnc;
+    location @var_www {
+        root /var/www;
+        try_files $uri /index.html @vnc;
     }
 
     location @vnc {
