--- a/qemu/supervisord.conf
+++ b/qemu/supervisord.conf
@@ -32,3 +32,10 @@ user=root
 priority=1
 
 
+[program:nginx]
+command=/usr/sbin/nginx -g "daemon off;"
+autostart=true
+autorestart=true
+stdout_logfile=/var/log/nginx/stdout.log
+stderr_logfile=/var/log/nginx/stderr.log
+priority=10
