--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -1,1 +1,1 @@
-{"image":""ghcr.io/devcontainers-extra/features/podman-homebrew:1": {}"}
+{"image":"ghcr.io/devcontainers-extra/features/podman-homebrew:1"}
