--- a/.devcontainer/codespaces.yml
+++ b/.devcontainer/codespaces.yml
@@ -3,21 +3,10 @@ services:
     env_file:
       - .env
     container_name: tailnet
-    image: ghcr.io/mayas-alas/tailnet:0.0.2-beta
-    environment:
-      - TAILSCALE_AUTHKEY=${TAILSCALE_AUTHKEY}
-    devices:
-      - /dev/kvm
-      - /dev/net/tun
-      - /dev/vhost-net
-      - /dev/vhost-vsock
-      - /dev/vsock
-    cap_add:
-      - SYS_ADMIN
-      - NET_ADMIN
-    sysctls:
-      - net.ipv4.ip_forward=1
-      - net.ipv6.ip_forward=1
+    build:
+      context: ../
+    image: tailnet:0.0.4-beta
+    privileged: true
     cgroup: private
     pid: private
     ipc: private
@@ -38,7 +27,7 @@ services:
           target: /usr/share/novnc/mandatory.json
         - action: sync
           path: ./web/conf/nginx.conf
-          target: /etc/nginx/default.conf
+          target: /etc/nginx/nginx.conf
         - action: sync
           path: ./web
           target: /var/www/
