--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,7 +19,18 @@
   },
   "runArgs": [
     "--device=/dev/net/tun",
-    "--privileged"
+    "--privileged",
+    "--cap-add=SYS_ADMIN",
+    "--cap-add=NET_ADMIN",
+    "--cap-add=SYS_RESOURCE",
+    "--cap-add=SYS_NICE",
+    "--cap-add=NET_RAW",
+    "--cap-add=IPC_LOCK",
+    "--cap-add=SYS_PTRACE"
+  ],
+  "securityOpt": [
+    "apparmor=unconfined",
+    "seccomp=unconfined"
   ],
   "forwardPorts": [
     8006
